@@ -26,10 +26,8 @@
 #define ACE_HAS_THREAD_SPECIFIC_STORAGE
 #define ACE_HAS_RECURSIVE_THR_EXIT_SEMANTICS
 #define ACE_HAS_2_PARAM_ASCTIME_R_AND_CTIME_R
-
-#if (__GLIBC__ == 2 && __GLIBC_MINOR__ > 3)
-#  define ACE_HAS_REENTRANT_FUNCTIONS
-#endif
+#define ACE_HAS_POSIX_GETPWNAM_R
+#define ACE_HAS_REENTRANT_FUNCTIONS
 
 #include /**/ "ace/post.h"
 
